assets/css/main.css
/* ... */
.item .icon .icon-topic {
    opacity: 0;
    padding-left: 0px;
    transition: 0.4s;
    display: inline-block;
    top: 0px;
    position: relative;
}

.item .icon:hover .icon-topic {
    opacity: 1;
    padding-left: 10px;
}

@media only screen and (max-width: 768px) {
    .item .icon {
        position: relative;
        top: 0;
        left: 0;
    }
}

.blog-body {
    background: #fbfbfb;
    font-family: "Merriweather", serif;
    /* font-size: 16px; */
    color: #777;
}

.blog-header {
    font-family: "Montserrat", sans-serif;
    font-size: 10rem;
    font-weight: 600;
}

.blog-title {
    text-align: center;
}

.blog-title .row {
    padding: 50px 0 0;
}

.blog-title h1 {
    text-transform: uppercase;
}

.blog-title .seperator {
    margin: 0 auto 10px;
}

@media only screen and (max-width: 768px) {
    .blog-footer {
        padding-bottom: 5rem !important;
    }
}

